# MoUSE

./: .gitignore  CITATION.cff  README.md  autors.md  format_code.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: code-linter.yml  pytest.yaml
dockerfiles/: Dockerfile.evaluate
notebooks/: Comparison.ipynb  HDBSCAN.ipynb  Spectrogram-CNN-Classifier.ipynb  Spectrogram-Simple-Classifier.ipynb  Spectrogram.ipynb
notebooks/entropy_energy/: entropy_energy.ipynb
notebooks/segmentation/: GAC.ipynb  initial_check.ipynb
scripts/: evaluate_detection_models_paper.py  optimise_GAC.py  process_dataset_GAC.py  process_dataset_GAC_ray.py
src/mouse/classifier/: cnn_classifier.py
src/mouse/denoising/: __init__.py  denoising.py
src/mouse/entropy_energy/: entropy_energy.py
src/mouse/nn_detection/: modeling_utils.py  neural_network.py
src/mouse/rule_based_classifier/: simple_classifier.py
src/mouse/segmentation/: GAC.py  __init__.py  optimisation.py
src/mouse/utils/: __init__.py  constants.py  data_util.py  data_util_test.py  metrics.py  modeling_utils.py  sound_util.py  visualization.py
tests/: data_util_test.py  denoising_test.py  metrics_test.py
