[tool.poetry]
name = "MoUSE"
version = "1.0.0"
description = "Joseph the MoUSE: Application for rodent ultrasonic identification - backend. Described in: Kania, Adam, et al. \"Joseph the MoUSE—Mouse Ultrasonic Sound Explorer.\" SoftwareX 25 (2024): 101606."
authors = ["JosephTheMoUSE <josephthemouse@googlegroups.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
matplotlib = "3.9.3"
opencv-python = "4.10.0.84"
pandas = "1.5.3"
requests = "2.31.0"
Rtree = "1.2.0"
scikit-image = "0.23.2"
scipy = "1.13.1"
environ-config = "^23.2.0"
torch = "^2.3.0"
torchaudio = "^2.3.0"
torchvision = "^0.18.0"
librosa = "^0.10.2.post1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
yapf = "0.40.2"

[tool.yapf]
based_on_style = "google"
split_all_top_level_comma_separated_values = true
column_limit = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"